--- a/online-store/index.html
+++ b/online-store/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Cambiamos el favicon al SVG de e‑shop -->
+    <link rel="icon" type="image/svg+xml" href="/src/assets/e-shop.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- Título actualizado -->
+    <title>E‑Shop</title>
   </head>
   <body>
     <div id="root"></div>
